fixed sponsor label & pause button visibility

--- a/pulse-300x250/sass/player.scss
+++ b/pulse-300x250/sass/player.scss
@@ -50,7 +50,9 @@
     }
 
     .pulse-player-active:hover & {
-        opacity: .6;
+        @media (min-width: 768px) {
+            opacity: .6;
+        }
     }
 
     &:after,
